--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body{
     border-bottom: solid black 1px;
     gap: 10px;
     align-items:center;
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 1;
 }
 .navbar__s1__tittle{
     color: #A435F0;
@@ -24,6 +28,7 @@ body{
     display: flex;
     gap: 10px;
     align-items: center;
+    background-color: transparent;
 
 }
 .navbar__s2 input{
@@ -40,6 +45,23 @@ body{
     gap: 10px;
     align-items: center;
 }
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    right: 0px;
+    padding: 20px;
+    display: none;
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
+}
 .categories{
     display: flex;
     padding: 10px;
@@ -54,9 +76,22 @@ body{
     padding: 10px;
     border-radius: 30px;
 }
+.sale-image{
+    position: relative;
+}
 .sale-image img{
     width: 100%;
 
+}
+.sale-image__offer{
+    width: 35%;
+    border: solid black 2px;
+    background-color: violet;
+    padding: 2%;
+    position: absolute;
+    top: 10%;
+    left: 10%; 
+    
 }
 .recommended{
     padding: 10px;
